fix position of step buttons on mobile

--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ h4 {
   }
 
   .step-buttons {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
